// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-cQIpJi grZAKh"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-cQIpJi bcuSGs"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-cQIpJi jfVvGS"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-cQIpJi bjPfwM"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-cQIpJi gDInrz"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-cQIpJi hfwaac"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-cQIpJi grZAKh"
  >
    Span tag
  </span>,
  <label
    className="sc-cQIpJi grZAKh"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-cQIpJi kqIOme"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-cQIpJi CJvwe"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-cQIpJi ivIGde"
  >
    Centered Text
  </p>,
  <p
    className="sc-cQIpJi fXRymB"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-cQIpJi enwgBM"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-cQIpJi grZAKh"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-cQIpJi jJyENq"
  >
    Uppercase Text
  </p>,
]
`;
